--- a/spreadsheets/index.html
+++ b/spreadsheets/index.html
@@ -20,7 +20,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Importing and Merging spreadsheets <br> <a href="https://github.com/SteveViss/Talk_bib"><i class="fa fa-github" aria-hidden="true"></i></a>',
+                title: 'Importing and Merging spreadsheets <br> <a href="https://github.com/SteveViss/Talk_meta_analysis"><i class="fa fa-github" aria-hidden="true"></i></a>',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -128,8 +128,8 @@ gs_ls()</pre>
 <pre >R&gt;&gt;  # A tibble: 27 x 10
 R&gt;&gt;                  sheet_title        author  perm version
 R&gt;&gt;                        &lt;chr&gt;         &lt;chr&gt; &lt;chr&gt;   &lt;chr&gt;
-R&gt;&gt;   1     Meta_analyses_google    s.vissault    rw     new
-R&gt;&gt;   2                   estran antoinetardif    rw     new
+R&gt;&gt;   1                   estran antoinetardif    rw     new
+R&gt;&gt;   2     Meta_analyses_google    s.vissault    rw     new
 R&gt;&gt;   3 Liste de diffusion écol… ecosherbrooke    rw     new
 R&gt;&gt;   4 Payment Form_Workshop P… dalal.e.hanna    rw     new
 R&gt;&gt;   5                   AGENDA ecosherbrooke    rw     new
