--- a/taxize/index.html
+++ b/taxize/index.html
@@ -20,7 +20,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Why and how to use <code>taxize</code>? <br> <a href="https://github.com/ropensci/taxize"><i class="fa fa-github" aria-hidden="true"></i></a>',
+                title: 'Why and how to use <code>taxize</code>? <br> <a href="https://github.com/SteveViss/Talk_meta_analysis"><i class="fa fa-github" aria-hidden="true"></i></a>',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
